# lib/db/src/schema/sales.ts
@@ -8,7 +8,9 @@ export const salesTable = pgTable("sales", {
   productName: text("product_name").notNull(),
   paymentMethod: text("payment_method").notNull(),
   quantity: integer("quantity").notNull().default(1),
+  installments: integer("installments").notNull().default(1),
   totalValue: numeric("total_value", { precision: 10, scale: 2 }).notNull().default("0"),
+  installmentValue: numeric("installment_value", { precision: 10, scale: 2 }).notNull().default("0"),
   date: timestamp("date").notNull().defaultNow(),
 });
 
